fix(ui): QInput/QSelect placeholder visible behind label when field is empty #18265

--- a/ui/src/components/field/QField.sass
+++ b/ui/src/components/field/QField.sass
@@ -401,13 +401,6 @@ $field-transition-label-right-up: .324s cubic-bezier(.4,0,.2,1)
         opacity: 0
 
       .q-field__native, .q-field__input
-
-        &:-ms-input-placeholder
-          color: transparent !important
-
-        &::-webkit-input-placeholder,
-        &::-moz-placeholder,
-        &::-ms-input-placeholder,
         &::placeholder
           color: transparent
 
