--- a/ui/src/css/core/helpers.sass
+++ b/ui/src/css/core/helpers.sass
@@ -12,17 +12,9 @@
 .glossy
   background-image: linear-gradient(to bottom, rgba(#fff, .3), rgba(#fff, 0) 50%, rgba(#000, .12) 51%, rgba(#000, .04)) !important
 
-.q-placeholder
-  &:-ms-input-placeholder
-    color: inherit !important
-    opacity: .7 !important
-
-  &::-webkit-input-placeholder,
-  &::-moz-placeholder,
-  &::-ms-input-placeholder,
-  &::placeholder
-    color: inherit
-    opacity: .7
+.q-placeholder::placeholder
+  color: inherit
+  opacity: .7
 
 /* body */
 .q-body--fullscreen-mixin, .q-body--prevent-scroll
